--- a/bio.html
+++ b/bio.html
@@ -13,7 +13,7 @@
 <main>
     <h1 class="titulo-principal">Sobre mim</h1>
 
-    <div class="texto">
+    <div class="container">
         <p>Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <em>qualidade</em>,
             <em>durabilidade</em> e que <em>agregam valor</em> para meus clientes.</p>
 
@@ -23,7 +23,7 @@
 
         <h2 class="subtitulo-texto">Como trabalho</h2>
 
-        <blockquote class="citacao-bio">
+        <blockquote class="citacao-bio fiat">
             <p>João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo
                 sem dúvidas!</p>
             <cite>José Souza, Fiat</cite>
@@ -38,7 +38,7 @@
 
         <h2 class="subtitulo-texto">Experiência</h2>
 
-        <blockquote class="citacao-bio">
+        <blockquote class="citacao-bio petrobras">
             <p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a
                 solução mais adequada com as tecnologias mais recentes.</p>
             <cite>Manoel Santos, Petrobrás</cite>
